# dynamixel_ws

devel/: local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/include/dynamixel_control/: GetPosition.h  GetPositionRequest.h  GetPositionResponse.h  SetPosition.h
devel/lib/dynamixel_control/: multi_dxl_node
devel/lib/dynamixel_sdk/: group_bulk_read.py  group_bulk_write.py  group_sync_read.py  group_sync_write.py  packet_handler.py  port_handler.py  protocol1_packet_handler.py  protocol2_packet_handler.py  robotis_def.py
devel/lib/pkgconfig/: dynamixel_control.pc  dynamixel_sdk.pc
devel/lib/python3/dist-packages/dynamixel_control/msg/: _SetPosition.py
devel/lib/python3/dist-packages/dynamixel_control/srv/: _GetPosition.py
devel/lib/python3/dist-packages/dynamixel_sdk/: __init__.py
devel/share/common-lisp/ros/dynamixel_control/msg/: SetPosition.lisp  _package.lisp  _package_SetPosition.lisp  dynamixel_control-msg.asd
devel/share/common-lisp/ros/dynamixel_control/srv/: GetPosition.lisp  _package.lisp  _package_GetPosition.lisp  dynamixel_control-srv.asd
devel/share/dynamixel_control/cmake/: dynamixel_control-msg-extras.cmake  dynamixel_control-msg-paths.cmake  dynamixel_controlConfig.cmake
devel/share/dynamixel_sdk/cmake/: dynamixel_sdkConfig.cmake
devel/share/gennodejs/ros/dynamixel_control/msg/: SetPosition.js
devel/share/gennodejs/ros/dynamixel_control/srv/: GetPosition.js
devel/share/roseus/ros/dynamixel_control/: manifest.l
devel/share/roseus/ros/dynamixel_control/msg/: SetPosition.l
devel/share/roseus/ros/dynamixel_control/srv/: GetPosition.l
src/dynamixel_control/: CMakeLists.txt  package.xml
src/dynamixel_control/config/: quadruped_gait.yaml
src/dynamixel_control/launch/: quadruped_gait.launch
src/dynamixel_control/msg/: SetPosition.msg
src/dynamixel_control/scripts/: gait_controller.py  quadruped_core.py  quadruped_gait.py
src/dynamixel_control/src/: multi_dxl_node.cpp
src/dynamixel_control/srv/: GetPosition.srv
src/single_leg_debug/: CMakeLists.txt  package.xml
src/single_leg_debug/config/: leg_config.yaml
src/single_leg_debug/launch/: leg_debug.launch
src/single_leg_debug/scripts/: leg_calibration.py  walking_test.py
src/single_servo_debug/: CMakeLists.txt  package.xml
src/single_servo_debug/config/: single_servo.yaml
src/single_servo_debug/launch/: single_servo.launch
src/single_servo_debug/scripts/: single_servo_node.py
