<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_control</name>
  <version>0.0.1</version>
  <description>ROS1 package for controlling multiple DYNAMIXEL motors (IDs 1-8 and 11-14).</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamixel_sdk</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
</package>
